--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
 
@@ -12,50 +13,53 @@
 	<f:viewAction action="#{autorBean.carregarAutorPorId}" if="#{param.autorId != null}"/>
 </f:metadata>
 
-<ui:define name="titulo">Novo Autor</ui:define>
+<ui:define name="titulo"><p:outputLabel>Novo Autor</p:outputLabel></ui:define>
 <ui:define name="conteudo">
 	<h:form >	
-		<fieldset>
-			<legend>Dados do Autor</legend>
-			<h:panelGrid columns="2">
+		<p:fieldset legend="Dados do Autor">
+			<p:panelGrid columns="3">
 			
-				<h:outputLabel value="Nome: " for="nome" />
-				<h:inputText id="nome" value="#{autorBean.autor.nome}" required="true"/>
+				<p:outputLabel value="Nome: " for="nome" />
+				<p:inputText id="nome" value="#{autorBean.autor.nome}" required="true">
+					<f:ajax event="blur" render="messageNome"/>
+				</p:inputText>
+				<p:message for="nome" id="messageNome"/>
 				
-				<h:outputLabel value="Email: " for="email" />
-				<h:inputText id="email" value="#{autorBean.autor.email}" required="true">
-					<f:passThroughAttribute name="type" value="email" />
-				</h:inputText>
+				<p:outputLabel value="Email: " for="email" />
+				<p:inputText id="email" value="#{autorBean.autor.email}" required="true" validatorMessage="Email inválido">
+					<f:validateRegex pattern=".+@.+" />
+					<f:ajax event="blur" render="messageEmail"/>
+				</p:inputText>
+				<p:message for="email" id="messageEmail"/>
 				
-				<h:commandButton value="Gravar" action="#{autorBean.gravar}">
+				<p:commandButton value="Gravar" action="#{autorBean.gravar}" process="@form" update="@form :formTabelaAutores">
 					<f:ajax execute="@form" render="@form :formTabelaAutores:tabelaAutores"/>
-				</h:commandButton>
-			</h:panelGrid>
-			<h:commandLink value="Lista de livros" action="#{livroBean.formLivro}" immediate="true"/> 
-		</fieldset>
+				</p:commandButton>
+			</p:panelGrid>
+			<p:commandLink value="Lista de livros" action="#{livroBean.formLivro}" immediate="true"/> 
+		</p:fieldset>
 	</h:form>
 	<br/>
 	
-	<h:form id="formTabelaAutores">
-		<h:dataTable value="#{autorBean.autores}" var="autor" id="tabelaAutores">
-			<h:column>
-				<f:facet name="header">Nome do Autor</f:facet>
+	<h:form id="formTabelaAutores" style="width:600px;">
+	
+		<p:dataTable value="#{autorBean.autores}" var="autor" id="tabelaAutores">
+			<p:column headerText="Nome do Autor" style="width:200px;">
 				<h:outputText value="#{autor.nome}" />
 				<h:outputText value="&#160;"/>
 				<h:outputText value="&#160;"/>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Alterar</f:facet>
+			</p:column>
+			<p:column headerText="Alterar" style="width:80px; text-align:center;">
 				<h:commandLink action="#{autorBean.carregar(autor)}" value="alterar" />
 				<h:outputText value="&#160;"/>
 				<h:outputText value="&#160;"/>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Remover</f:facet>
-				<h:commandLink action="#{autorBean.remover(autor)}" value="remove" />
-			</h:column>
-		</h:dataTable>
+			</p:column>
+			<p:column headerText="Remover" style="width:80px;text-align:center;">
+				<p:commandLink action="#{autorBean.remover(autor)}" value="remove" process="@form" update="@form :formTabelaAutores"/>
+			</p:column>
+		</p:dataTable>
 	</h:form>
+	<br/><br/>
 </ui:define>
 </ui:composition>
 
