--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -3,52 +3,50 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+    xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">Novo Livro</ui:define>
 	<ui:define name="conteudo">
 	<h:form>	
 		<h:messages id="messages"/>
-		<fieldset>
-			<legend>Dados do Livro</legend>
-			<h:panelGrid columns="2">
+		<p:fieldset legend="Dados do Livro">
+			<p:panelGrid columns="2">
 
-				<h:outputLabel value="Titulo:" for="titulo" />
+				<p:outputLabel value="Titulo:" for="titulo" />
 				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" required="true" requiredMessage="Título obrigatório" >
 					<f:ajax event="blur" render="messages"/> 
 				</h:inputText>
 
-				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" required="true" requiredMessage="ISBN obrigatório"
+				<p:outputLabel value="ISBN:" for="isbn" />
+				<p:inputMask mask="999-9-99-999999-9" id="isbn" value="#{livroBean.livro.isbn}" required="true" requiredMessage="ISBN obrigatório"
 				validator="#{livroBean.comecaComDigitoUm}"/>
 
-				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}"/>
+				<p:outputLabel value="Preço:" for="preco" />
+				<p:inputNumber id="preco" value="#{livroBean.livro.preco}"/>
 
-				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-				<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}" >
-					<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo"/>
-				</h:inputText>
+				<p:outputLabel value="Data de Lançamento:" for="dataLancamento" />
+				<p:calendar id="dataLancamento" value="#{livroBean.livro.dataLancamento.time}" 
+				pattern="dd/MM/yyyy" mask="true" timeZone="America/Sao_Paulo" lang="pt"/>
 				
-			</h:panelGrid>
-		</fieldset>
-		
-		<fieldset>
-			<legend>Dados do Autor</legend>
-			<h:outputLabel value="Selecione um autor: " for="autor"/>
+			</p:panelGrid>
+		</p:fieldset>
+		<br />
+		<p:fieldset legend="Dados do Autor">
+			<p:outputLabel value="Selecione um autor: " for="autor"/>
 			
-			<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
+			<p:selectOneMenu value="#{livroBean.autorId}" id="autor">
 				<f:selectItems value="#{livroBean.autores}" 
 					var="autor" itemLabel="#{autor.nome}" itemValue="#{autor.id}"/>
-			</h:selectOneMenu>
+			</p:selectOneMenu>
 			
-			<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor()}">
+			<p:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor()}">
 				<f:ajax execute="autor" render="tabelaAutores"/>
-			</h:commandButton>
+			</p:commandButton>
 			
 			<br/>
-			<h:commandLink value="Cadastrar novo autor" action="#{livroBean.formAutor}" immediate="true"/> 
+			<p:commandLink value="Cadastrar novo autor" action="#{livroBean.formAutor}" immediate="true"/> 
 			<br/>
 				
 			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="tabelaAutores">
@@ -60,7 +58,7 @@
 					<h:commandLink action="#{livroBean.removerAutorDoLivro(autor)}" value="remover" />
 				</h:column>
 			</h:dataTable>
-		</fieldset>
+		</p:fieldset>
 		
 		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
 			<f:ajax execute="@form" render="@form :formTabelaLibros:tabelaLivros"/>
