criada a página ring.xhtml

--- a/WebContent/_template.xhtml
+++ b/WebContent/_template.xhtml
@@ -9,6 +9,9 @@
     .ui-widget, .ui-widget .ui-widget {
 		font-size: 15px !important;
 	}
+	.ui-datatable .ui-datatable-header {
+        text-align: right !important;
+    }
 </style>
 <h:outputScript library="js" name="calendar.js" />
 </h:head>
